# frc-bot-2025

./: Dockerfile  README.md  build.gradle  meson.build  pyproject.toml  robot.py  tuner-project.json
.github/workflows/: build.yml
.wpilib/: wpilib_preferences.json
choreostuff/: FRC2025Path.chor  moveAnDropBLUELEFT.traj  moveAnDropBLUERIGHT.traj  moveAndDropREDMIDDLE.traj  moveAndDropREDRIGHT.traj
docs/: build-meson.md  build-python.md
meson/allwpilib/: meson.build
pybot/: autolink.py  autos.py  drivetrain_service.py  dualmotor.py  elevator.py  intake.py  lifter.py  limelighthelper.py  limelighthelpers.py  limelightinit.py  limelights.py  physics.py  pyproject.toml  robot.py  robotcontainer.py  setup.py  telemetry.py  vision.py
pybot/.wpilib/: wpilib_preferences.json
pybot/automodetraj/: moveAnDropBLUEMIDDLE.traj  moveAndDropREDLEFT.traj
pybot/deploy/choreo/: COMPLEXCRAZY.traj  FRC2025Path.chor  leftscore.traj  midscore.traj  outway.traj  outwayblue.traj  outwayred.traj  redscore.traj
pybot/experimental/: LimelightHelpers.java
pybot/lime/: test.py
pybot/rpydemo/: .gitignore
pybot/subsystems/: command_swerve_drivetrain.py  point_at_coordinate_command.py
pybot/tests/: basics.py  main.cpp
pybot/tests/fixtures/: limelightdata.py
robot/: config.lua  robot.lua  teleop.bot
src/: bindings.cpp  config.cpp  drivetrain.cpp  lifter.cpp  lifter.hpp  limelight.cpp  main.cpp  meson.build  parameters.cpp  robot.cpp  robot.hpp  scripting.cpp
src/include/: robot.hpp  types.hpp
test/: configtest.cpp  enginetest.cpp  main.cpp  parameterstest.cpp
util/: build-github.sh  build-luajit-macos.sh
